--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "package.json", "use": "@vercel/static-build" }
-  ],
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "build",
+  "framework": "create-react-app",
   "env": {
     "REACT_APP_API_URL": "https://dompablo-barbearia.onrender.com"
   },
