--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
+  "framework": "create-react-app",
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "build",
-  "framework": "create-react-app",
   "env": {
     "REACT_APP_API_URL": "https://dompablo-barbearia.onrender.com"
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
