--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dompablo-frontend",
+  "name": "dompablo-site",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,5 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
