--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dompablo-site",
+  "name": "dompablo-barbearia",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,13 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.2.0"
   }
 }
